# cmake_dll_example

./: CMakeLists.txt
cmake_app/: CMakeLists.txt  MuExecRefsDll.cpp
cmake_dll/: CMakeLists.txt  MathFuncsDll.cpp
